# DECREE

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  buf.gen.yaml  decree.yaml  docker-compose.yml
.github/workflows/: frontend.yml  go.yml  infra.yml  rust.yml
db/: atlas.hcl  schema.hcl
db/migrations/: 20260315000000_init.sql  20260315100000_add_vuln_instance_unique.sql  20260315200000_m2_enrichment_tables.sql  20260316000000_m3_job_leases.sql  20260316100000_m4_gateway_indexes.sql  20260316200000_unique_project_target_name.sql  atlas.sum  (+1 more)
scripts/: init-redis.sh
services/scanner/: Cargo.toml  Dockerfile  build.rs
services/scanner/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  outbox.rs
services/scanner/src/adapter/: container.rs  git.rs  mod.rs  sbom.rs
services/scanner/src/connect/: error.rs  handler.rs
services/scanner/src/db/: models.rs  queries.rs
services/scanner/src/enrichment/: mod.rs  projection.rs  score.rs
services/scanner/src/enrichment/epss/: client.rs  types.rs
services/scanner/src/enrichment/exploitdb/: sync.rs  types.rs
services/scanner/src/enrichment/nvd/: client.rs  types.rs
services/scanner/src/osv/: client.rs  mod.rs  types.rs  version.rs
services/scanner/src/rpc/: mod.rs  service.rs
services/scanner/src/sbom/: cyclonedx.rs  detect.rs  mod.rs  model.rs  spdx.rs  syft.rs
services/scanner/src/scan/: pipeline.rs
services/scanner/tests/: integration_scan.rs
services/scanner/tests/fixtures/: cyclonedx_minimal.json  osv_response.json  spdx_minimal.json  syft_minimal.json
(+187 files in other folders)
