[package]
name = "decree-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.7"
prost = "0.13"
pbjson = "0.7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3"
url = "2"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
hex = "0.4"
csv = "1"
cvss = "2"

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"

[dev-dependencies]
wiremock = "0.6"
